overflow issue fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,10 @@
 
 html {
   scroll-behavior: smooth;
+  /*  */
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .scrollOffset {
@@ -40,7 +44,7 @@ html {
 
 /* Custom Background Colours */
 .gradient-white {
-  background-image: linear-gradient(90deg, #f3f1ed, #cad5e5);
+  /* background-image: linear-gradient(90deg, #f3f1ed, #cad5e5); */
 }
 
 
@@ -52,6 +56,9 @@ body {
   color: rgb(var(--foreground-rgb));
   background:linear-gradient(90deg, #f8f4ef,#f3f1ed);
   /* background: #E5E5E5; */
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 @layer utilities {
